# SBQ_ARAM

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adapters/agents/: api_agent.py  base.py  llm_agent.py  passthrough_agent.py  prompt_agent.py
adapters/llm/: base.py  custom_api.py  llama_cpp.py  ollama.py  openai_compatible.py  router.py
adapters/parsers/: base.py  json_parser.py  research_report_parser.py  trading_decision_parser.py
adapters/tools/: base.py  fingpt_client.py  news_client.py  rag_client.py  sbq_quant_client.py
app/: main.py
app/routes/: health.py  workflows.py
app/schemas/: common.py  research_report.py  trace.py  trading_decision.py
configs/: agent_overrides.example.yaml  config.yaml  fallback_policy.yaml  finrobot_default.yaml  model_registry.yaml  tool_registry.yaml  tradingagents_default.yaml
docs/: overview.md
prompts/finrobot/: concept_cot_agent.yaml  data_cot_agent.yaml  report_writer.yaml  thesis_cot_agent.yaml  valuation_agent.yaml
prompts/tradingagents/: bear_researcher.yaml  bull_researcher.yaml  fundamental_analyst.yaml  risk_manager.yaml  sentiment_analyst.yaml  technical_analyst.yaml  trader.yaml
supervisor/: checkpoint.py  optional_langgraph_supervisor.py  retry_policy.py
tests/: test_llm_providers.py  test_output_schemas.py
ui/: streamlit_app.py
workflows/: base.py
workflows/finrobot/: wrapper.py
workflows/tradingagents/: wrapper.py
